Isolate desktop nav styles using header prefix to prevent horizontal squishing of mobile nav menu list

--- a/Assests/CSS/about.css
+++ b/Assests/CSS/about.css
@@ -92,18 +92,18 @@ header nav {
     height: 90px;
 }
 
-nav ul {
+header nav ul {
     display: flex;
     justify-content: center;
 }
 
-nav ul li {
+header nav ul li {
     list-style: none;
     margin: 0 25px;
     position: relative;
 }
 
-nav ul li a {
+header nav ul li a {
     text-decoration: none;
     color: white;
     font-size: 1.05rem;
@@ -111,11 +111,11 @@ nav ul li a {
     font-weight: 500;
 }
 
-nav ul li a.active {
+header nav ul li a.active {
     color: #1bcbe2;
 }
 
-nav ul li::after {
+header nav ul li::after {
     content: '';
     height: 3px;
     width: 0;
@@ -126,7 +126,7 @@ nav ul li::after {
     transition: 0.5s;
 }
 
-nav ul li:hover::after {
+header nav ul li:hover::after {
     width: 100%;
 }
 
