--- a/Assests/CSS/sc.css
+++ b/Assests/CSS/sc.css
@@ -79,18 +79,18 @@ nav {
     align-items: center;
 }
 
-nav ul {
+header nav ul {
     display: flex;
     justify-content: center;
 }
 
-nav ul li {
+header nav ul li {
     list-style: none;
     margin: 0 25px;
     position: relative;
 }
 
-nav ul li a {
+header nav ul li a {
     text-decoration: none;
     color: white;
     font-size: 1.05rem;
@@ -98,7 +98,7 @@ nav ul li a {
     font-weight: 500;
 }
 
-nav ul li::after {
+header nav ul li::after {
     content: '';
     height: 3px;
     width: 0;
@@ -109,7 +109,7 @@ nav ul li::after {
     transition: 0.5s;
 }
 
-nav ul li:hover::after {
+header nav ul li:hover::after {
     width: 100%;
 }
 
