--- a/Assests/CSS/style.css
+++ b/Assests/CSS/style.css
@@ -65,23 +65,23 @@ nav {
     align-items: center;
     height: 90px;
 }
-nav ul {
+header nav ul {
     display: flex;
     justify-content: center;
 }
-nav ul li {
+header nav ul li {
     list-style: none;
     margin: 0 25px;
     position: relative;
 }   
-nav ul li a {
+header nav ul li a {
     text-decoration: none;
     color: white;
     font-size: 1.05rem;
     letter-spacing: 0.05rem;
     font-weight: 500;
 }
-nav ul li::after {
+header nav ul li::after {
     content: '';
     height: 3px;
     width: 0;
@@ -91,7 +91,7 @@ nav ul li::after {
     bottom: -10px;
     transition: 0.5s;
 }
-nav ul li:hover::after {
+header nav ul li:hover::after {
     width: 100%;
 }
 
